
[build-system]
requires = ["setuptools", "wheel", "Cython",  "numpy", "lisaanalysistools"]
build-backend = 'setuptools.build_meta'

[tool.poetry]
name = "gbgpu"
version = "1.1.3"
description = "GPU/CPU Galactic Binary Waveforms"
license = "GPL"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
homepage = "https://github.com/mikekatz04/GBGPU"
authors = ["Michael L. Katz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
numpy = "^2.0.0"
lisaanalysistools = "^0.5.1"
h5py = "^3.13.0"
scipy = "^1.15.2"
fastlisaresponse = "1.0.11"

# astropy = "==5.2.1"
# corner = "==2.2.1"
# healpy = "==1.16.2"
# "ligo.skymap" = "==1.0.4"
# matplotlib = "==3.6.3"
# pandas = "==1.5.2"
# seaborn = "==0.12.2"
# tables = "==3.8.0"
